# glint

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: APP_STORE.md  RELEASE.md  design-language.md
docs/assets/: generate_marketing.py  store_assets.py
licensing/: README.md  package-lock.json  package.json  wrangler.toml
licensing/scripts/: check.mjs  wtest.mjs
licensing/src/: index.js
scripts/: mas-package.sh
site/: CNAME  app.js  i18n.js  index.html  privacy.html  speedtest.js  styles.css
src/: app.js  diff.css  diff.html  diff.js  i18n.js  index.html  styles.css  themes.js
src-tauri/: Cargo.toml  entitlements.appstore.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  github.rs  license.rs  main.rs  theme.rs
