[package]
name = "glint"
version = "0.1.0"
description = "A glint of Git in your menu bar"
edition = "2021"
authors = ["peterdsp"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# In-process Git via libgit2. Vendored + statically linked so the app carries
# its own libgit2 (no Homebrew/system dependency at runtime). https + ssh enable
# native fetch/push (issue #2); on macOS libssh2's crypto is vendored so the app
# stays self-contained.
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "vendored-openssl",
    "https",
    "ssh",
] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
