[package]
name = "glint"
version = "0.1.0"
description = "A glint of Git in your menu bar"
edition = "2021"
authors = ["peterdsp"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.54.0"

# In-process Git via libgit2 (issues #1/#2), vendored + statically linked so the
# app carries its own copy - no runtime dependency on a `git` binary. On macOS
# and Linux, https/ssh vendor OpenSSL (libssh2's crypto backend). On Windows the
# platform crypto (Schannel for TLS, WinCNG for SSH) is used instead, so there's
# no OpenSSL build to wrangle there.
[target.'cfg(not(target_os = "windows"))'.dependencies]
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "vendored-openssl",
    "https",
    "ssh",
] }

# Native translucency: NSVisualEffectView on macOS, Mica on Windows. Linux has
# no equivalent, so the panel falls back to its CSS tint there.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "https",
    "ssh",
] }
window-vibrancy = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
