[package]
name = "glint"
version = "1.0.0"
description = "A glint of Git in your menu bar"
edition = "2021"
authors = ["peterdsp"]

[[bin]]
name = "glint"
path = "src/main.rs"

# Offline license tooling. Gated behind the `keygen` feature so it is never
# built (and therefore never bundled into a release .app) unless asked for
# explicitly: `cargo run --features keygen --bin glint-keygen -- ...`.
[[bin]]
name = "glint-keygen"
path = "src/bin/keygen.rs"
required-features = ["keygen"]

[features]
# Default (Ko-fi / direct download): 7-day trial + license gate + self-updater.
default = ["updater"]
updater = ["dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
# App Store build: `--no-default-features --features appstore`. Apple gates the
# purchase and pushes updates, so no trial, no license gate, no self-updater.
appstore = []
# Build the offline license key generator (glint-keygen). Off by default so the
# tool never ends up inside a shipped bundle.
keygen = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.54.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

# Self-updater (Ko-fi/direct build only; excluded from the App Store build).
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# In-process Git via libgit2 (issues #1/#2), vendored + statically linked so the
# app carries its own copy - no runtime dependency on a `git` binary. On macOS
# and Linux, https/ssh vendor OpenSSL (libssh2's crypto backend). On Windows the
# platform crypto (Schannel for TLS, WinCNG for SSH) is used instead, so there's
# no OpenSSL build to wrangle there.
[target.'cfg(not(target_os = "windows"))'.dependencies]
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "vendored-openssl",
    "https",
    "ssh",
] }

# Native translucency: NSVisualEffectView on macOS, Mica on Windows. Linux has
# no equivalent, so the panel falls back to its CSS tint there.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "https",
    "ssh",
] }
window-vibrancy = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
